--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="https://raw.githubusercontent.com/iamsakil/iamsakil.github.io/master/avatar_hat.jpg" style="width:100%" alt="SAKIL MALLICK">
+          <img src="https://1drv.ms/i/s!AuC78BI2-CKLk3fCF8TkYP05R6hw" style="width:100%" alt="SAKIL MALLICK">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2>Sakil Mallick</h2>
           </div>
