--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="https://raw.githubusercontent.com/iamsakil/iamsakil.github.io/master/FB_IMG_1505645704454.jpg">
+          <img src="https://raw.githubusercontent.com/iamsakil/iamsakil.github.io/master/avatar.jpg">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2 style="color:#069">Sakil Mallick</h2>
           </div>
