--- a/index.html
+++ b/index.html
@@ -88,16 +88,18 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b></b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i></h6>
-          <p></p>
+          <h5 class="w3-opacity"><b>Crowd Sensing Android App Development using MDP</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>October 2017 - November 2017</h6>
+          <p>Android app development for crowd sensing of access point data based on Markov Decision Process</p>
           <hr>
         </div>
+        <!--
         <div class="w3-container">
           <h5 class="w3-opacity"><b></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i></h6>
           <p></p><br>
         </div>
+        -->
       </div>
 
       <div class="w3-container w3-card-2 w3-white">
