--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div id="lead-content">
             <h1>Sakil Mallick</h1>
             <h2>CS Major | Software Developer</h2>
-            <a href="https://drive.google.com/open?id=1onhT_QGxF-7Zryku7uIz_kZe_BrVV_Mz" class="btn-rounded-white">Download Resume</a>
+            <a href="https://github.com/iamsakil/iamsakil.github.io/raw/master/MyCV.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
