--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <p>
                             Android app development for crowd sensing of access point data based on Markov Decision Process on the device parameters such as battery percentage, charging status, CPU usage etc.
                         </p>
-                        <a href="https://github.com/iamsakil/MDP-Crowd-Sensing-Android-App">View Project</a>
+                        <a href="https://github.com/iamsakil/APSense">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
