fixed header and education

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
+    <title>Arslans Portfolio</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -33,7 +33,7 @@
             </li>
 			-->
             <li>
-                <a href="#education">Education</a>
+                <a href="#education">Recent Experience</a>
             </li>
             <li>
                 <a href="#projects">Projects</a>
@@ -50,9 +50,9 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Sakil Mallick</h1>
-            <h2>CS Major | Software Developer</h2>
-            <a href="https://github.com/iamsakil/iamsakil.github.io/raw/master/MyCV.pdf" class="btn-rounded-white">Download Resume</a>
+            <h1>Arslan Ahmad</h1>
+            <h2>Full Stack Web Developer</h2>
+            <a href="https://github.com/arslanah99/resume/raw/master/Arslan%20Ahmad%20_%20Resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -75,10 +75,11 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hi! Welcome to my portfolio website. This website contains all information about my academics & projects work, as well as other details like contact info etc.
-						I am currently pursuing my Bachelors degree in Computer Science and Engineering from Jadavpur University, Kolkata-700032, India.
-						I am a tech lover. I am interested in Android Development, Web Development etc.
-						For more info, explore the sit or contact me.
+                            I am a result driven full stack developer who is obsessed with the process of improving my skills. I first discovered my love for coding from
+                            an early age through game design in high school. I have a proven track record of performing well in fast-paced environments. I am eager
+                            to emerge myself in complex issues that will allow for personal growth in web development. I am extremely team oriented and I believe
+                            that teamwork is the best way to approach tough problems and to help build a strong foundation. Additionally, I love to play basketball as I
+                            believe it improves my work ethic and ability to communicate with others.
                     </p>
                 </div>
             </div>
@@ -86,85 +87,60 @@
     </div>
     <!-- End #about -->
 
-	<!--
+	
 	
     <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
+        <h2 class="heading">Recent Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="November 2017 – April 2018">
+                <h3>Guess Factory</h3>
+                <h4>Sales Associate</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                       <li>Acheived an average of 190% of sales goals for 3 consective months</li> 
+                       <li>Provided outstanding customer service</li> 
+                       <li>Maintain accurate and attractive merchandise displays, ensuring strategic placement of products
+                            in order to maximize purchases</li> 
+                       <li>Stock, replenish, and organize inventory with accuracy and efficiency</li> 
+
+                    </p>
+            </div>
+
+            <div data-date="March 2018 – April 2018">
+                <h3>Ahmadiyya Basketball League Belize</h3>
+                <h4>Coaching and Mentoring Basketball</h4>
+                <p>
+                    <li>Coached and Mentored over 250 children to play basketball.</li>
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="September 2017 – December 2017">
+                <h3>Forest Lawn High School</h3>
+                <h4>Math Tutor</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
-
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    <li>I tutored over 20 grade 10 students to improve their math grades</li>
                 </p>
             </div>
         </div>
     </div>
-    <!-- End #experience -->
+    <!-- End #experience
 
 	-->
 	
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>Jadavpur University</h3>
-            <span class="education-date">August 2015 -  December 2019</span>
-            <h4>Bachelor of Computer Science and Engineering</h4>
+            <h3>Lighthouse Labs</h3>
+            <span class="education-date">February 2019 - April 2019</span>
+            <h4>Web Development Diploma</h4>
             <p>
-                Pursuing my Bachelors from Jadavpur University. Currently in 3rd year. Doing coursework as well as projects under Proffesors.
             </p>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>Rasulpur B.M. High School</h3>
-            <span class="education-date">2013 - 2015</span>
-            <h4>Higher Secondary</h4>
-            <ul>
-                <li>
-                    Done my higher secondary from this school.
-                </li>
-                <li>
-                    Under WBCHSE (West Bengal Council of Higher Secondary Education)
-                </li>
-                <li>
-                    Secured 95.6% marks.
-                </li>
-            </ul>
-        </div>
-        <!-- End .education-block -->
-		
-		<div class="education-block">
-            <h3>Rasulpur B.M. High School</h3>
-            <span class="education-date">2013 - 2015</span>
-            <h4>Secondary</h4>
-            <ul>
-                <li>
-                    Done my secondary from this school.
-                </li>
-                <li>
-                    Under WBBSE (West Bengal Board of Secondary Education)
-                </li>
-                <li>
-                    Secured 94.71% marks.
-                </li>
-            </ul>
+            <h3>Forest Lawn High School</h3>
+            <span class="education-date">2014 - 2017</span>
+            <h4>High School</h4>
         </div>
         <!-- End .education-block -->
 		
