--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                                     <li>JavaScript</li>
                                 </ul>
                             </div>
-                            <a href="https://github.com/tranpaulyn/realUpcycleYYC" style="padding-right: 23px;">Github</a>
-                            <a href="https://afternoon-tor-83860.herokuapp.com/">Live Demo</a>
+                            <a target='_blank' href="https://github.com/tranpaulyn/realUpcycleYYC" style="padding-right: 23px;">Github</a>
+                            <a target='_blank' href="https://afternoon-tor-83860.herokuapp.com/">Live Demo</a>
                         </div>
                     <!-- End .project-info -->
                 </div>
@@ -202,8 +202,8 @@
                                         <li>Nodemon</li>
                                     </ul>
                                 </div>
-                            <a href="https://github.com/arslanah99/elFedora" style="padding-right: 23px;">Github</a>
-                            <a href="https://elfedora.herokuapp.com/">Live Demo</a>
+                            <a target='_blank' href="https://github.com/arslanah99/elFedora" style="padding-right: 23px;">Github</a>
+                            <a target='_blank' href="https://elfedora.herokuapp.com/">Live Demo</a>
                         </div>
                         <!-- End .project-info -->
                     </div>
@@ -230,7 +230,7 @@
                                             <li>UUID</li>
                                         </ul>
                                     </div>
-                                <a href="https://github.com/arslanah99/ChattyApp" style="padding-right: 23px;">Github</a>
+                                <a target='_blank' href="https://github.com/arslanah99/ChattyApp" style="padding-right: 23px;">Github</a>
                             </div>
                             <!-- End .project-info -->
                         </div>
@@ -258,7 +258,7 @@
                                                 <li>Nodemon</li>
                                             </ul>
                                         </div>
-                                    <a href="https://github.com/arslanah99/tweeter" style="padding-right: 23px;">Github</a>
+                                    <a target='_blank' href="https://github.com/arslanah99/tweeter" style="padding-right: 23px;">Github</a>
                                 </div>
                                 <!-- End .project-info -->
                             </div>
@@ -286,7 +286,7 @@
                                                             <li>Weather API</li>
                                                     </ul>
                                                 </div>
-                                            <a href="https://github.com/arslanah99/Weather-App" style="padding-right: 23px;">Github</a>
+                                            <a target='_blank' href="https://github.com/arslanah99/Weather-App" style="padding-right: 23px;">Github</a>
                                         </div>
                                         <!-- End .project-info -->
                                     </div>
