--- a/index.html
+++ b/index.html
@@ -27,23 +27,26 @@
             <li>
                 <a href="#about">About</a>
             </li>
-			<!--
             <li>
-                <a href="#experience">Experience</a>
-            </li>
-			-->
-            <li>
-                <a href="#experience">Recent Experience</a>
-            </li>
-            <li>
-                <a href="#education">Education</a>
+                <a href="#skills">Skills</a>
             </li>
             <li>
                 <a href="#projects">Projects</a>
             </li>
+
+			<!--
             <li>
-                <a href="#skillsz">Skills</a>
+                <a href="#experience">Experience</a>
             </li>
+            -->
+            <li>
+                <a href="#education">Education</a>
+            </li>
+
+            <li>
+                <a href="#experience">Recent Experience</a>
+            </li>
+
             <li>
                 <a href="#contact">Contact</a>
             </li>
@@ -90,66 +93,30 @@
     </div>
     <!-- End #about -->
 
-	
-	
-    <div id="experience" class="background-alt">
-        <h2 class="heading">Recent Experience</h2>
-        <div id="experience-timeline">
-            <div data-date="November 2017 – April 2018">
-                <h3>Guess Factory</h3>
-                <h4>Sales Associate</h4>
-                <p>
-                       <li>Acheived an average of 190% of sales goals for 3 consective months</li> 
-                       <li>Provided outstanding customer service</li> 
-                       <li>Maintain accurate and attractive merchandise displays, ensuring strategic placement of products
-                            in order to maximize purchases</li> 
-                       <li>Stock, replenish, and organize inventory with accuracy and efficiency</li> 
+    <div id="skills">
+        <h2 class="heading">Skills</h2>
+        <ul>
+            <li>React</li>
+            <li>AJAX</li>
+			<li>jquery</li>
+			<li>Bootstrap</li>
+			<li>SASS</li>
+            <li>Express</li>
+            <li>EJS</li>
+            <li>Knex</li>
+			<li>JavaScript</li>
+			<li>Ruby</li>
+			<li>HTML</li>
+            <li>CSS</li>
+            <li>Ruby On Rails</li>
+            <li>NodeJS</li>
+			<li>SQL</li>
+			<li>MongoDB</li>
+			<li>Postgres</li>
 
-                    </p>
-            </div>
-
-            <div data-date="March 2018 – April 2018">
-                <h3>Ahmadiyya Basketball League Belize</h3>
-                <h4>Coaching and Mentoring Basketball</h4>
-                <p>
-                    <li>Coached and Mentored over 250 children to play basketball.</li>
-                </p>
-            </div>
-
-            <div data-date="September 2017 – December 2017">
-                <h3>Forest Lawn High School</h3>
-                <h4>Math Tutor</h4>
-                <p>
-                    <li>I tutored over 20 grade 10 students to improve their math grades</li>
-                </p>
-            </div>
-        </div>
+        </ul>
     </div>
-    <!-- End #experience
-
-	-->
-	
-    <div id="education">
-        <h2 class="heading">Education</h2>
-        <div class="education-block">
-            <h3>Lighthouse Labs</h3>
-            <span class="education-date">February 2019 - April 2019</span>
-            <h4>Web Development Diploma</h4>
-            <p>
-            </p>
-        </div>
-        <!-- End .education-block -->
-
-        <div class="education-block">
-            <h3>Forest Lawn High School</h3>
-            <span class="education-date">2014 - 2017</span>
-            <h4>High School</h4>
-        </div>
-        <!-- End .education-block -->
-		
-    </div>
-    <!-- End #education -->
-
+    <!-- End #skills -->
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
         <div class="container">
@@ -292,30 +259,67 @@
                                     </div>
     <!-- End #projects -->
 </div>
-    <div id="skills">
-        <h2 class="heading">Skills</h2>
-        <ul>
-            <li>React</li>
-            <li>AJAX</li>
-			<li>jquery</li>
-			<li>Bootstrap</li>
-			<li>SASS</li>
-            <li>Express</li>
-            <li>EJS</li>
-            <li>Knex</li>
-			<li>JavaScript</li>
-			<li>Ruby</li>
-			<li>HTML</li>
-            <li>CSS</li>
-            <li>Ruby On Rails</li>
-            <li>NodeJS</li>
-			<li>SQL</li>
-			<li>MongoDB</li>
-			<li>Postgres</li>
-
-        </ul>
+	
+<div id="education">
+    <h2 class="heading">Education</h2>
+    <div class="education-block">
+        <h3>Lighthouse Labs</h3>
+        <span class="education-date">February 2019 - April 2019</span>
+        <h4>Web Development Diploma</h4>
+        <p>
+        </p>
     </div>
-    <!-- End #skills -->
+    <!-- End .education-block -->
+
+    <div class="education-block">
+        <h3>Forest Lawn High School</h3>
+        <span class="education-date">2014 - 2017</span>
+        <h4>High School</h4>
+    </div>
+    <!-- End .education-block -->
+    
+</div>
+<!-- End #education -->
+
+	
+    <div id="experience" class="background-alt">
+        <h2 class="heading">Recent Experience</h2>
+        <div id="experience-timeline">
+            <div data-date="November 2017 – April 2018">
+                <h3>Guess Factory</h3>
+                <h4>Sales Associate</h4>
+                <p>
+                       <li>Acheived an average of 190% of sales goals for 3 consective months</li> 
+                       <li>Provided outstanding customer service</li> 
+                       <li>Maintain accurate and attractive merchandise displays, ensuring strategic placement of products
+                            in order to maximize purchases</li> 
+                       <li>Stock, replenish, and organize inventory with accuracy and efficiency</li> 
+
+                    </p>
+            </div>
+
+            <div data-date="March 2018 – April 2018">
+                <h3>Ahmadiyya Basketball League Belize</h3>
+                <h4>Coaching and Mentoring Basketball</h4>
+                <p>
+                    <li>Coached and Mentored over 250 children to play basketball.</li>
+                </p>
+            </div>
+
+            <div data-date="September 2017 – December 2017">
+                <h3>Forest Lawn High School</h3>
+                <h4>Math Tutor</h4>
+                <p>
+                    <li>I tutored over 20 grade 10 students to improve their math grades</li>
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- End #experience
+
+	-->
+
+   
 
     <div id="contact">
         <h2>Get in Touch</h2>
