--- a/index.html
+++ b/index.html
@@ -300,11 +300,11 @@
                 </p>
             </div>
 
-            <div data-date="September 2017 – December 2017">
-                <h3>Forest Lawn High School</h3>
-                <h4>Math Tutor</h4>
+                 <div data-date="May 2019 – Current">
+                <h3>Lighthouse Labs</h3>
+                <h4>Workshop Mentor</h4>
                 <p>
-                    <li>I tutored over 20 grade 10 students to improve their math grades</li>
+                    <li>Mentored beginner coders in learning fundamentals of coding</li>
                 </p>
             </div>
         </div>
