--- a/index.html
+++ b/index.html
@@ -81,11 +81,15 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                            I am a result driven full stack developer who is obsessed with the process of improving my skills. I first discovered my love for coding from
-                            an early age through game design in high school. I have a proven track record of performing well in fast-paced environments. I am eager
-                            to emerge myself in complex issues that will allow for personal growth in web development. I am extremely team oriented and I believe
-                            that teamwork is the best way to approach tough problems and to help build a strong foundation. Additionally, I love to play basketball as I
-                            believe it improves my work ethic and ability to communicate with others.
+I’m result driven full stack developer with a passion for learning new
+technologies. I discovered my love for coding from an early age through
+game design. I have a proven track record of performing well in fast-paced
+environments. My current focus is to encounter technologies in every aspect
+of web development to become better at combining different skills for more
+stable code. I am team oriented and I believe that teamwork is the best way
+to approach tough problems and to help build a strong foundation. I also like
+to play basketball and workout in my free time.
+
                     </p>
                 </div>
             </div>
