--- a/index.html
+++ b/index.html
@@ -81,14 +81,11 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-I’m result driven full stack developer with a passion for learning new
-technologies. I discovered my love for coding from an early age through
-game design. I have a proven track record of performing well in fast-paced
-environments. My current focus is to encounter technologies in every aspect
-of web development to become better at combining different skills for more
-stable code. I am team oriented and I believe that teamwork is the best way
-to approach tough problems and to help build a strong foundation. I also like
-to play basketball and workout in my free time.
+I’m a result driven full stack developer with 1 year of experience in design, development,
+testing and implementation of modern development technologies. 
+I am skilled in a variety of technologies such as, ReactJS with Hooks and Redux, PHP , SQL, Git,  
+NodeJS, And Express. I am  seeking an opportunity to be an asset to the growth of a company as 
+well as grow my knowledge in modern technologies. 
 
                     </p>
                 </div>
@@ -108,15 +105,19 @@ to play basketball and workout in my free time.
             <li>Express</li>
             <li>EJS</li>
             <li>Knex</li>
+		<li>REST</li>
 			<li>JavaScript</li>
 			<li>Ruby</li>
 			<li>HTML</li>
             <li>CSS</li>
             <li>Ruby On Rails</li>
             <li>NodeJS</li>
+		<li>PHP</li>
 			<li>SQL</li>
 			<li>MongoDB</li>
 			<li>Postgres</li>
+		<li>MySQL</li>
+		<li>Git</li>
 
         </ul>
     </div>
@@ -304,13 +305,6 @@ to play basketball and workout in my free time.
         </p>
     </div>
     <!-- End .education-block -->
-<!-- 
-    <div class="education-block">
-        <h3>Forest Lawn High School</h3>
-        <span class="education-date">2014 - 2017</span>
-        <h4>High School</h4>
-    </div>
-    End .education-block -->
     
 </div>
 <!-- End #education -->
@@ -332,11 +326,11 @@ to play basketball and workout in my free time.
                     </p>
             </div>
 
-            <div data-date="March 2018 – April 2018">
-                <h3>Ahmadiyya Basketball League Belize</h3>
-                <h4>Coaching and Mentoring Basketball</h4>
+            <div data-date="May 2019 - Current">
+                <h3>CodeTEEN Mentor</h3>
+                <h4>Calgary Public Library</h4>
                 <p>
-                    <li>Coached and Mentored over 250 children to play basketball.</li>
+                    <li>Mentored beginner developers in learning fundamentals of coding.</li>
                 </p>
             </div>
 
