--- a/index.html
+++ b/index.html
@@ -313,6 +313,20 @@ well as grow my knowledge in modern technologies.
     <div id="experience" class="background-alt">
         <h2 class="heading">Recent Experience</h2>
         <div id="experience-timeline">
+	    <div data-date="August 2019 - Current">
+                <h3>Holmetrics</h3>
+                <h4>Lead Front End Developer</h4>
+		    <h7>Employee burnout management software (https://holmetrics.com/)</h7>
+                <p>
+                       <li>Built complete front-end of Holmetrics using ReactJS, Node, Express, Auth0, Google APIs</li> 
+                       <li>Incorporated complete Auth0 login for user authentication</li> 
+                       <li>Utilized Google APIs to gather physical metrics such as step data </li> 
+                       <li>Implemented MySQL data into Wordpress using PHP</li> 
+
+                    </p>
+            </div>
+		
+		
             <div data-date="November 2017 – April 2018">
                 <h3>Guess Factory</h3>
                 <h4>Sales Associate</h4>
