--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ well as grow my knowledge in modern technologies.
                                                     </ul>
                                                 </div>
                                             <a target='_blank' href="https://github.com/arslanah99/interviewQuestionAssignment" style="padding-right: 23px;">Github</a>
-                                            <a target='_blank' href="https://images-gallerys.herokuapp.com/" style="padding-right: 23px;">Live Demo</a>
+                                            <a target='_blank' href="https://iamgegalleryapp.herokuapp.com/" style="padding-right: 23px;">Live Demo</a>
                                         </div>
                                         <!-- End .project-info -->
                                     </div>
